--- a/components/config/erigon-config.yaml
+++ b/components/config/erigon-config.yaml
@@ -23,7 +23,7 @@ zkevm.l1-first-block: 1
 zkevm.l1-highest-block-type: "latest"
 
 zkevm.rpc-ratelimit: 250
-zkevm.data-stream-port: 6900
+zkevm.data-stream-port: {{.sequencer_ds_port}}
 zkevm.datastream-version: 2
 zkevm.data-stream-host: "127.0.0.1"
 zkevm.sequencer-initial-fork-id: {{.fork_id}}
@@ -36,7 +36,7 @@ zkevm.allow-pre-eip155-transactions: true
 externalcl: true
 http.api : ["eth","debug","net","trace","web3","erigon","txpool","zkevm"]
 http.addr: "0.0.0.0"
-http.port: 8123
+http.port: {{.sequencer_rpc_port}}
 http.vhosts: '*'
 http.corsdomain: '*'
 
