--- a/components/config/mockprover-config.json
+++ b/components/config/mockprover-config.json
@@ -32,13 +32,13 @@
     "saveInputToFile": false,
     "saveDbReadsToFile": false,
     "saveDbReadsToFileOnChange": false,
-    "saveOutputToFile": false,
-    "saveProofToFile": false,
-    "saveResponseToFile": false,
+    "saveOutputToFile": true,
+    "saveProofToFile": true,
+    "saveResponseToFile": true,
     "loadDBToMemCache": true,
     "opcodeTracer": false,
     "logRemoteDbReads": false,
-    "logExecutorServerResponses": false,
+    "logExecutorServerResponses": true,
 
     "proverServerPort": 50051,
     "proverServerMockPort": 50052,
