--- a/components/config/erigon-config.yaml
+++ b/components/config/erigon-config.yaml
@@ -26,11 +26,11 @@ zkevm.rpc-ratelimit: 250
 zkevm.data-stream-port: {{.sequencer_ds_port}}
 zkevm.datastream-version: 2
 zkevm.data-stream-host: "127.0.0.1"
-zkevm.sequencer-initial-fork-id: {{.fork_id}}
+# zkevm.sequencer-initial-fork-id: {{.fork_id}}
 zkevm.executor-strict: false
 zkevm.witness-full: false
-zkevm.sequencer-block-seal-time: "30m"
-zkevm.sequencer-batch-seal-time: "4h"
+zkevm.sequencer-block-seal-time: "5s"
+zkevm.sequencer-batch-seal-time: "15m"
 zkevm.allow-pre-eip155-transactions: true
 
 externalcl: true
