--- a/components/config/erigon-config.yaml
+++ b/components/config/erigon-config.yaml
@@ -3,19 +3,19 @@ chain : "dynamic-cdk"
 http : true
 private.api.addr : "localhost:9096"
 zkevm.l2-chain-id: {{.l2_chain_id}}
-zkevm.l2-sequencer-rpc-url: {{.seq_rpc}}
-zkevm.l2-datastreamer-url: {{.seq_ds}}
+zkevm.l2-sequencer-rpc-url: "{{.seq_rpc}}"
+zkevm.l2-datastreamer-url: "{{.seq_ds}}"
 zkevm.l1-chain-id: {{.l1_chain_id}}
-zkevm.l1-rpc-url: {{.l1_rpc_url}}
+zkevm.l1-rpc-url: "{{.l1_rpc_url}}"
 
-zkevm.address-sequencer: {{.sequencer.address}}
-zkevm.address-zkevm: {{.zkevmAddress}}
-zkevm.address-admin: {{.admin.address}}
-zkevm.address-rollup: {{.rollupAddress}}
-zkevm.address-ger-manager: {{.gerAddress}}
+zkevm.address-sequencer: "{{.sequencer.address}}"
+zkevm.address-zkevm: "{{.zkevmAddress}}"
+zkevm.address-admin: "{{.admin.address}}"
+zkevm.address-rollup: "{{.rollupAddress}}"
+zkevm.address-ger-manager: "{{.gerAddress}}"
 
 zkevm.l1-rollup-id: 1
-zkevm.l1-matic-contract-address: {{.polAddress}}
+zkevm.l1-matic-contract-address: "{{.polAddress}}"
 zkevm.l1-block-range: 20000
 zkevm.l1-query-delay: 6000
 # zkevm.l1-first-block: {{.rollupBlockNumber}}
@@ -27,10 +27,11 @@ zkevm.data-stream-port: {{.sequencer_ds_port}}
 zkevm.datastream-version: 2
 zkevm.data-stream-host: "127.0.0.1"
 # zkevm.sequencer-initial-fork-id: {{.fork_id}}
-zkevm.executor-strict: false
+zkevm.executor-strict: true
+zkevm.executor-urls: "{{.stateless_executor}}:50071"
 zkevm.witness-full: false
-zkevm.sequencer-block-seal-time: "5s"
-zkevm.sequencer-batch-seal-time: "15m"
+zkevm.sequencer-block-seal-time: "3s"
+zkevm.sequencer-batch-seal-time: "12s"
 zkevm.allow-pre-eip155-transactions: true
 
 externalcl: true
@@ -42,3 +43,4 @@ http.corsdomain: '*'
 
 ws: true
 rpc.batch.limit: 500
+zkevm.default-gas-price: 100000000
