--- a/components/config/executor-config.json
+++ b/components/config/executor-config.json
@@ -30,7 +30,7 @@
     "useMainExecGenerated": true,
     "saveRequestToFile": false,
     "saveInputToFile": false,
-    "saveDbReadsToFile": false,
+    "saveDbReadsToFile": true,
     "saveDbReadsToFileOnChange": false,
     "saveOutputToFile": true,
     "saveProofToFile": true,
@@ -82,12 +82,12 @@
     "dbGetTree": true,
     "cleanerPollingPeriod": 600,
     "requestsPersistence": 3600,
-    "maxExecutorThreads": 256,
-    "maxProverThreads": 256,
-    "maxHashDBThreads": 256,
+    "maxExecutorThreads": 32,
+    "maxProverThreads": 16,
+    "maxHashDBThreads": 16,
     "ECRecoverPrecalc": false,
-    "ECRecoverPrecalcNThreads": 32,
-    "stateManager": true,
+    "ECRecoverPrecalcNThreads": 8,
+    "stateManager": false,
     "useAssociativeCache" : false,
     "jsonLogs": false
 }
