--- a/components/config/executor-config.json
+++ b/components/config/executor-config.json
@@ -30,12 +30,12 @@
     "useMainExecGenerated": true,
     "saveRequestToFile": false,
     "saveInputToFile": false,
-    "saveDbReadsToFile": true,
+    "saveDbReadsToFile": false,
     "saveDbReadsToFileOnChange": false,
-    "saveOutputToFile": true,
-    "saveProofToFile": true,
-    "saveResponseToFile": true,
-    "loadDBToMemCache": true,
+    "saveOutputToFile": false,
+    "saveProofToFile": false,
+    "saveResponseToFile": false,
+    "loadDBToMemCache": false,
     "opcodeTracer": false,
     "logRemoteDbReads": false,
     "logExecutorServerResponses": true,
