Update to forkid 11

--- a/components/config/aggregator-config.toml
+++ b/components/config/aggregator-config.toml
@@ -9,7 +9,7 @@ ProofStatePollingInterval = "5s"
 SenderAddress = "{{.aggregator.address}}"
 CleanupLockedProofsInterval = "2m"
 GeneratingProofCleanupThreshold = "10m"
-ForkId = 9
+ForkId = {{.rollup_fork_id}}
 GasOffset = 0
 WitnessURL = "{{.sequencer_rpc_url}}"
 LERContract = "{{.ger_l2_address}}"
