Add option for validium/rollup

--- a/components/config/aggregator-config.toml
+++ b/components/config/aggregator-config.toml
@@ -69,4 +69,4 @@ BatchProofSanityCheckEnabled = true
 			BlockFinality = "latest"
 		[Aggregator.Synchronizer.Etherman]
 			[Aggregator.Synchronizer.Etherman.Validium]
-				Enabled = true
+				Enabled = {{.is_validium}}
